--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,12 @@
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait" />
 
-        <!--<activity-->
-            <!--android:name=".ui.activity.PictureDetailActivity"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@style/Theme.Slidr.Slidable"/>-->
+        <activity android:name=".ui.activity.LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.PictureDetailActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Slidr.Slidable"/>
 
         <!--<activity-->
             <!--android:name=".ui.activity.SettingActivity"-->
