--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.AuthorActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.SettingActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activity.PictureDetailActivity"
             android:screenOrientation="portrait"
