--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,14 @@
         <activity android:name=".ui.activity.AuthorActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.SettingActivity"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.activity.PictureDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Slidr.Slidable"/>
+    <activity
+        android:name=".ui.activity.PictureDetailActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/Theme.Slidr.Slidable"/>
 
-        <!--<activity-->
+    <!--<activity-->
             <!--android:name=".ui.activity.SettingActivity"-->
             <!--android:screenOrientation="portrait"-->
             <!--android:theme="@style/Theme.Slidr.Slidable"/>-->
