--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,10 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait" />
-
         <activity android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.AuthorActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.SettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Slidr.Slidable"/>
