--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
 
         <activity
             android:name=".ui.activity.MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
         <activity android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.AuthorActivity"
@@ -43,7 +44,8 @@
         <activity
             android:name=".ui.activity.PictureDetailActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Slidr.Slidable"/>
+            android:theme="@style/Theme.Slidr.Slidable"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
 
     <!--<activity-->
             <!--android:name=".ui.activity.SettingActivity"-->
